--- a/Дискретная_математика/BFS.ipynb
+++ b/Дискретная_математика/BFS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,11 +33,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def BFS(graph):\n",
+    "def Kompoenta_K(graph):\n",
     "    versch = len(graph)\n",
     "    spisok=[]\n",
     "    for i in range(versch):       \n",
@@ -56,23 +56,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "v = BFS(graph)"
+    "v = len(Kompoenta_K(graph))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0, 1, 2], [3, 4]] результат\n"
+      "2 результат\n"
      ]
     }
    ],
