--- a/Дискретная_математика/Search_Most.ipynb
+++ b/Дискретная_математика/Search_Most.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,65 +56,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "SetReberMost = []"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 [[0, 0, 1, 0, 0], [0, 0, 1, 0, 0], [1, 1, 0, 1, 0], [0, 0, 1, 0, 1], [0, 0, 0, 1, 0]]\n",
-      "1 [[0, 1, 0, 0, 0], [1, 0, 1, 0, 0], [0, 1, 0, 1, 0], [0, 0, 1, 0, 1], [0, 0, 0, 1, 0]]\n",
-      "1 [[0, 0, 1, 0, 0], [0, 0, 1, 0, 0], [1, 1, 0, 1, 0], [0, 0, 1, 0, 1], [0, 0, 0, 1, 0]]\n",
-      "1 [[0, 1, 1, 0, 0], [1, 0, 0, 0, 0], [1, 0, 0, 1, 0], [0, 0, 1, 0, 1], [0, 0, 0, 1, 0]]\n",
-      "1 [[0, 1, 0, 0, 0], [1, 0, 1, 0, 0], [0, 1, 0, 1, 0], [0, 0, 1, 0, 1], [0, 0, 0, 1, 0]]\n",
-      "1 [[0, 1, 1, 0, 0], [1, 0, 0, 0, 0], [1, 0, 0, 1, 0], [0, 0, 1, 0, 1], [0, 0, 0, 1, 0]]\n",
-      "2 [[0, 1, 1, 0, 0], [1, 0, 1, 0, 0], [1, 1, 0, 0, 0], [0, 0, 0, 0, 1], [0, 0, 0, 1, 0]]\n",
-      "2 [[0, 1, 1, 0, 0], [1, 0, 1, 0, 0], [1, 1, 0, 0, 0], [0, 0, 0, 0, 1], [0, 0, 0, 1, 0]]\n",
-      "2 [[0, 1, 1, 0, 0], [1, 0, 1, 0, 0], [1, 1, 0, 1, 0], [0, 0, 1, 0, 0], [0, 0, 0, 0, 0]]\n",
-      "2 [[0, 1, 1, 0, 0], [1, 0, 1, 0, 0], [1, 1, 0, 1, 0], [0, 0, 1, 0, 0], [0, 0, 0, 0, 0]]\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range (len(graph)):\n",
-    "    for j in range (len(graph)):\n",
-    "        if graph[i][j] == 1:\n",
-    "            graph[i][j] = 0\n",
-    "            graph[j][i] = 0\n",
-    "            if len(Kompoenta_K(graph)) > 1:\n",
-    "                SetReberMost.append([i,j])\n",
-    "            graph[i][j] = 1\n",
-    "            graph[j][i] = 1"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[[2, 3], [3, 2], [3, 4], [4, 3]]"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "SetReberMost"
+    "def SearchMost(graph):\n",
+    "    SetReberMost = []\n",
+    "    for i in range (len(graph)):\n",
+    "        for j in range (len(graph)):\n",
+    "            if graph[i][j] == 1:\n",
+    "                graph[i][j] = 0\n",
+    "                graph[j][i] = 0\n",
+    "                if len(Kompoenta_K(graph)) > 1:\n",
+    "                    SetReberMost.append([i,j])\n",
+    "                graph[i][j] = 1\n",
+    "                graph[j][i] = 1\n",
+    "    return SetReberMost"
    ]
   }
  ],
